Add more routes for associating POIs with Categories & Tags
